objects/PC_ProtectedApiSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>PC_ProtectedApiDescription__c</fullName>
        <label>Protected Api Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_ProtectedApiKey__c</fullName>
        <label>Protected Api Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_ProtectedApiValue__c</fullName>
        <label>Protected Api Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_SubscriberEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to show this setting in the protected api settings and to accept input key from subscriber.</inlineHelpText>
        <label>Subscriber Editable</label>
        <type>Checkbox</type>
    </fields>
    <label>Protected Api Settings</label>
</CustomObject>